--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Cafe Menu</title>
     <link href="styles.css" rel="stylesheet"/>
   </head>
+  <!-- The body tag starts here -->
   <body>
     <div class="menu">
       <main>
